--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Brian's Brain</title>
-		<link rel="shortcut icon" href="/favicon.fc7b9a6e.ico">
-	</head>
-
-	<body>
-		<main></main>
-		<script src="/src.f69400ca.js"></script>
-	</body>
-</html>
-
+<!doctype html><html><head><meta charset="utf-8"><title>Brian's Brain</title><link rel="icon shortcut" href="favicon.9edab1fb.ico"></head><body> <main></main> <script src="src.0d92c689.js"></script> </body></html>
