--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Brian's Brain</title><link rel="icon shortcut" href="favicon.9edab1fb.ico"></head><body> <main></main> <script src="src.722cd00a.js"></script> </body></html>
+<!doctype html><html><head><meta charset="utf-8"><title>Brian's Brain</title><link rel="icon" type="image/png" href="favicon.d987fed3.png"></head><body> <main></main> <script src="src.722cd00a.js"></script> </body></html>
